Made the entire app responsive

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.2" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -34,9 +34,9 @@
     <title>React App</title>
     
   </head>
-  <body>
+  <body style="margin: auto">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="margin: 0 auto;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
