--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,17 @@
     
 
     <title>React App</title>
-    
+    <style>
+      @media screen and (min-width: 1426px) {
+        .outerContainer {
+          width: 100vw;
+        }
+      }
+    </style>
   </head>
-  <body style="margin: auto">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="outerContainer">
     <div id="root" style="margin: 0 auto;"></div>
     <!--
       This HTML file is a template.
@@ -47,5 +54,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    </div>
   </body>
 </html>
